# Cmake-Qml-plugin-Example

./: CMakeLists.txt
Qaterial/: Clipboard.hpp  IconLabelImpl.hpp  IconLabelPositionner.hpp  Logger.hpp  TextFile.cpp  Version.hpp
app/: CMakeLists.txt  hello.txt
app/src/: main.cpp
app/src/qml/: main.qml
app/src/qml/plugins/my/plugin/example/: qmldir
include/Qaterial/: Export.hpp
plugins/: CMakeLists.txt
plugins/Qaterial/: CMakeLists.txt  IconDescription.cpp  IconDescription.hpp  plugin.qrc  qaterialplugin.cpp  qaterialplugin.h  qmldir
plugins/my/plugin/example/: CMakeLists.txt
qml/Qaterial/: CalendarDayPickerView.qml  CalendarNavigationBar.qml  plugin.qmltypes  qmldir
